upgrade: relation creation working now
